<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.NoteFragment">

    <TextView
        android:id="@+id/note_label"
        style="@style/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_label"
        android:textSize="@dimen/note_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/note_edit_text"
        style="@style/descriptionMovieTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="@dimen/note_text_size"
        app:layout_constraintBottom_toTopOf="@id/note_button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/note_label"
        app:layout_constraintTop_toBottomOf="@id/note_label"
        tools:text="@string/hello_blank_fragment" />

    <Button
        android:id="@+id/note_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_textView_genre"
        android:text="@string/note_button_text_cancel"
        android:textColor="?attr/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/note_button_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_edit_text"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/note_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_button_text_save"
        android:textColor="?attr/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/note_button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/note_button_cancel"
        app:layout_constraintTop_toBottomOf="@id/note_edit_text"
        app:layout_constraintVertical_weight="10" />

</androidx.constraintlayout.widget.ConstraintLayout>